-Fixed remove button with double click instead of buttons. -Renamed "discard" pile -Readjusted table (card) spacing)

--- a/Assignment2/src/main/java/assets/css/AcesUp.css
+++ b/Assignment2/src/main/java/assets/css/AcesUp.css
@@ -1,9 +1,9 @@
 tr{
-width:500px;
+width: 20%;
 }
 
 td{
-width:100px;
+width:114px;
 height:20px;
 text-align:center;
 }
@@ -54,7 +54,7 @@ table{
 text-align:center;
 margin-left:auto;
 margin-right:auto;
-border-spacing: 150px 5px;
+position: relative;
 }
 
 footer{
